--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <h1 class="card-title text-center mb-4">Stopwatch & Real-Time Speech Transcription</h1>
                         
                         <!-- Control Buttons -->
-                        <div class="d-flex justify-content-center mb-3">
+                        <div class="d-flex justify-content-center mb-3 controls">
                             <button id="startButton" class="btn btn-success me-2">Start</button>
                             <button id="pauseButton" class="btn btn-warning me-2" disabled>Pause</button>
                             <button id="downloadButton" class="btn btn-primary me-2" disabled>Download Transcription</button>
@@ -106,5 +106,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="script.js"></script>
+
+    <!-- Footer with Copyright -->
+    <footer class="text-center py-4">
+        <p>&copy; <span id="currentYear"></span> Mohamed Raed. All rights reserved.</p>
+    </footer>
+
+    <script>
+        // Dynamically update the current year
+        document.getElementById('currentYear').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
